# BoAt_V0.1

./: .gitignore  README.md  guidebook.html  start_tools.sh  start_ui.sh  stop_tools.sh  stop_ui.sh
boat-platform/: CMakeLists.txt  CMakePresets.json  Dockerfile.dev  Dockerfile.runtime  LICENSE  README.md  docker-compose.yml  project-plan.md
boat-platform/.github/workflows/: ci.yml  release.yml
boat-platform/cli/: howto_cli.md  pyproject.toml
boat-platform/cli/boat_cli/: ai.py  ai_backend.py  ai_config.py  bus_setup_context.py  can_tp.py  cli_context.py  completions.py  db.py  device.py  frame.py  main.py  output.py  pdu.py  plugin.py  plugin_context.py  replay.py  scenario.py  scenario_context.py  sim.py  test.py  trace.py
boat-platform/cli/tests/: test_ai.py  test_cli_commands.py  test_cli_output.py
boat-platform/cmake/: BoAtPlugin.cmake  BoAtProto.cmake  BoAtTest.cmake  Packaging.cmake
boat-platform/config/: ford_cgeal_2_ptcan_2011.json  ford_fusion_2018_adas.json  ford_fusion_2018_pt.json  gen_pdu_db_test.py  gen_pdu_db_vcan.py  hyundai_2015_mcan.json  hyundai_i30_2014.json  mercedes_benz_e350_2010.json  pdu_db.schema.json  pdu_db_example.json  pdu_db_test.json  pdu_db_vcan.json  vw_meb.json  vw_mqbevo.json
boat-platform/config/tests/: env_hybrid.json  env_physical.json  env_running.json  env_virtual.json  environment.schema.json  manifest.schema.json  report.schema.json
boat-platform/demo/: cyclic_sender_node.py  eth_cyclic_sender_node.py  restbus_simulator.py  virtual_psu_node.py  virtual_relay_node.py
boat-platform/demo/pdu_features/: 01_groups_example.sh  02_transmission_schedules.sh  03_com_signal_demo.cpp  04_can_tp_example.sh  05_someip_example.sh  06_python_sdk_example.py
boat-platform/demo/tcp_plugin/: tcp_listen_server.py  tcp_relay.py  tcp_send_client.py
boat-platform/devops/: ci-cd.md  deployment-plan.md
boat-platform/docs/: execution_pipeline.md  index.html  project.html
boat-platform/docs/ai/: llm-cost-control.md
boat-platform/docs/api/: api-specification.md  protobuf-definitions.md
boat-platform/docs/architecture/: data-model.md  device-integration-plan.md  ipc-architecture.md  scalability-strategy.md  system-architecture.md
boat-platform/docs/database/: database-design.md
boat-platform/docs/diagrams/: class-diagrams.md  sequence-diagrams.md
boat-platform/docs/howto/: dbc2boatjson.md  devices.md  replay.md
boat-platform/docs/pipeline/: data-processing-pipeline.md
boat-platform/docs/testing/: test-howto.html  test-plan.md  test-strategy.md
boat-platform/proto/boat/v1/: backbone.proto  bus.proto  can.proto  common.proto  control.proto  debug.proto  device.proto  ethernet.proto  fault.proto  frame.proto  metrics.proto  pdu.proto  plugin.proto  replay.proto  scenario.proto  signal.proto  simulation.proto  trace.proto
boat-platform/scripts/: listen_on_vcan0_for_id_0x300_as_soon_as_plugin.py
boat-platform/sdk/cpp/: CMakeLists.txt
boat-platform/sdk/python/: pyproject.toml
boat-platform/sdk/python/boat/: __main__.py  bus_node.py  can_node.py  can_tp.py  cli.py  client.py  cmd.py  device_node.py  eth_trace_analyzer.py  ethernet_node.py  frame_node.py  message.py  pcapng.py  pdu_db.py  pdu_message_node.py  pdu_node.py  scenario_builder.py  trace_analyzer.py  trace_recorder.py  trace_replay.py  trace_reverse_engineer.py
boat-platform/sdk/python/tests/: conftest.py  test_eth_replay.py  test_pcapng.py  test_scenario_builder.py  test_stub_imports.py  test_test_allure_report.py  test_test_bus.py  test_test_check.py  test_test_config.py  test_test_harness.py  test_test_html_report.py  test_test_pdu.py  test_test_report.py  test_test_runner.py  test_test_trace.py
boat-platform/src/core/: CMakeLists.txt  device_manager_interface.h  frame.cpp  frame.h  pdu_router_interface.h
boat-platform/src/core/determinism/: determinism_engine.cpp  determinism_engine.h
boat-platform/src/core/event/: event_bus.cpp  event_bus.h
boat-platform/src/core/fault/: fault_injector.cpp  fault_injector.h
boat-platform/src/core/plugin/: plugin_manager.cpp  plugin_manager.h
boat-platform/src/core/scenario/: scenario_loader.cpp  scenario_loader.h
boat-platform/src/core/scheduler/: sim_clock.cpp  sim_clock.h  tick_scheduler.cpp  tick_scheduler.h
boat-platform/src/core/signal/: signal_bus.cpp  signal_bus.h  signal_router.cpp  signal_router.h
boat-platform/src/core/simulation/: simulation_context.cpp  simulation_context.h
boat-platform/src/core/state/: sim_state_machine.cpp  sim_state_machine.h
boat-platform/src/gateway/: CMakeLists.txt
boat-platform/src/gateway/grpc_gateway/: CMakeLists.txt  bus_service_impl.cpp  bus_service_impl.h  can_service_impl.cpp  can_service_impl.h  debug_service_impl.cpp  debug_service_impl.h  device_service_impl.cpp  device_service_impl.h  ethernet_service_impl.cpp  ethernet_service_impl.h  fault_service_impl.cpp  fault_service_impl.h  frame_service_impl.cpp  frame_service_impl.h  frame_sink.cpp  frame_sink.h  gateway_context.h  main.cpp  metrics_service_impl.cpp  metrics_service_impl.h  pdu_service_impl.cpp  pdu_service_impl.h  plugin_service_impl.cpp  plugin_service_impl.h  replay_service_impl.cpp  replay_service_impl.h  rpc_audit_interceptor.h  rpc_audit_log.h  scenario_service_impl.cpp  scenario_service_impl.h  signal_service_impl.cpp  signal_service_impl.h  simulation_service_impl.cpp  simulation_service_impl.h  trace_service_impl.cpp  trace_service_impl.h
boat-platform/src/hil/: CMakeLists.txt  can_bus_registry.cpp  can_bus_registry.h  ethernet_bus_registry.cpp  ethernet_bus_registry.h  ethernet_hil_bridge.cpp  ethernet_hil_bridge.h  hil_bridge.cpp  hil_bridge.h
boat-platform/src/hil/can/: socket_can_driver.h  (+3 more)
boat-platform/src/ipc/: CMakeLists.txt  ipc_channel_selector.cpp  ipc_channel_selector.h  ipc_payload_dispatch.cpp  ipc_payload_dispatch.h
boat-platform/src/plugins/: CMakeLists.txt
boat-platform/src/replay/: CMakeLists.txt  bus_signal_recorder.cpp  bus_signal_recorder.h
boat-platform/src/store/: CMakeLists.txt
boat-platform/src/tests/: CMakeLists.txt  hw_can_tp_hil_test.py  hw_eth_test.py
(+212 files in other folders)
