[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boat-cli"
version = "0.1.0"
description = "Typer-based CLI for BoAt platform"
requires-python = ">=3.11"
dependencies = [
  "typer[all]>=0.12",
  "rich>=13",
  "boat-py>=0.1.0",
  "python-can>=4.0.0",
]

[project.scripts]
boat = "boat_cli.main:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["boat_cli*"]
