[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boat-py"
version = "0.1.0"
description = "Python SDK for BoAt simulation platform"
requires-python = ">=3.11"
dependencies = [
  "grpcio>=1.81.1",
  "grpcio-tools>=1.81.1",
  "protobuf>=6.31.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio",
]
# Speeds up boat.trace_reverse_engineer's bit-correlation clustering; a pure-Python
# fallback runs without it, just slower on large traces with many CAN IDs.
analysis = [
  "numpy",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["boat*"]
