add_subdirectory(can_tp)
add_subdirectory(pdu_router)
add_subdirectory(someip)
add_subdirectory(tcp)
add_subdirectory(probe)
add_subdirectory(virtual_psu)
add_subdirectory(virtual_relay)
add_subdirectory(device_manager)
add_subdirectory(scpi_device)
add_subdirectory(virtual_generator)
add_subdirectory(modbus_device)
add_subdirectory(gpio_relay)
add_subdirectory(backbone)
